[package]
name = "rust-bevy-cheeseball"
version = "0.15.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.15"
bevy_atmosphere = "0.12"
bevy_rapier3d = { version = "0.28", features = [ "simd-stable", "debug-render" ] }
rand = "*"

